# KIMP

./: CMakeLists.txt  globals.h  gui.cpp  gui.h  layer.h  main.cpp  resource.h  resources.rc  shortcuts.json  vec.h
ext/FreeImage/: FreeImage.lib
ext/imgui/: FreeImage.h  imgui_impl_dx11.cpp  imgui_internal.h
gui/menus/: effect.h  export.h  newLayer.h
gui/menus/layers/: newLayer.h
managers/: assetManager.cpp  assetManager.h  canvasManager.cpp  canvasManager.h  commandManager.cpp  commandManager.h  cropManager.cpp  cropManager.h  effectManager.cpp  effectManager.h  fileManager.cpp  fileManager.h
res/: shortcuts.json
res/HLSL/: fullscreen_triangle.hlsl  mask.hlsl  transparent_tex.hlsl
res/HLSL/adjustments/: brightnessContrast.hlsl  colorBalance.hlsl  curves.hlsl  exposure.hlsl  hueSaturation.hlsl  invert.hlsl  levels.hlsl  monochrome.hlsl  posterize.hlsl  threshold.hlsl  vibrance.hlsl
res/HLSL/blendModes/: colorBurn.hlsl  colorDodge.hlsl  darken.hlsl  difference.hlsl  exclusion.hlsl  hardLight.hlsl  lighten.hlsl  multiply.hlsl  normal.hlsl  overlay.hlsl  screen.hlsl  softLight.hlsl
res/HLSL/effects/basic/: kernel.hlsl
res/HLSL/effects/blur/: gaussianBlur.hlsl
res/HLSL/effects/noise/: noise.hlsl
res/layout/: editorLayout.xml  mainMenuBar.xml
tools/: brushTool.cpp  brushTool.h  cropTool.cpp  cropTool.h  handTool.cpp  handTool.h  moveTool.cpp  moveTool.h  pipetteTool.cpp  pipetteTool.h  selectTool.cpp  selectTool.h  shapeTool.cpp  shapeTool.h  tool.cpp  tool.h  wandTool.cpp  wandTool.h  zoomTool.cpp  zoomTool.h
